including a link to the cookbook up for adoption

--- a/app/views/adoption_mailer/interest_email.text.erb
+++ b/app/views/adoption_mailer/interest_email.text.erb
@@ -1,5 +1,7 @@
 Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some interest today.
 
+<%= "#{Rails.root}#{cookbook_path(@name)}" %>
+
 Here is the interested user's information:
 Supermarket Username: <%= @adopting_username %>
 Email Address: <%= @email %>
