--- a/app/views/adoption_mailer/interest_email.html.erb
+++ b/app/views/adoption_mailer/interest_email.html.erb
@@ -1,5 +1,7 @@
 Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some interest today.
 
+<%= link_to(@name, "#{Rails.root}#{cookbook_path(@name)}") %>
+
 Here is the interested user's information:
 Supermarket Username: <%= @adopting_username %>
 Email Address: <%= mail_to @email %>
