makes small wording changes to the adoption email templates

--- a/app/views/adoption_mailer/interest_email.html.erb
+++ b/app/views/adoption_mailer/interest_email.html.erb
@@ -2,8 +2,8 @@ Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some i
 <%= link_to(@name, "#{Rails.root}#{cookbook_path(@name)}") %>
 <br />
 <br />
-Here is the interested user's information:<br />
+Here is the information you need to know about the awesome Chef who interested in adoption your <%= @thing %>:<br />
 Supermarket Username: <%= @adopting_username %><br />
 Email Address: <%= mail_to @email %><br />
 
-Please get in touch with them.
+Please get in touch with this Chef to discuss the potential adoption.
