--- a/app/views/adoption_mailer/interest_email.text.erb
+++ b/app/views/adoption_mailer/interest_email.text.erb
@@ -2,8 +2,8 @@ Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some i
 
 <%= "#{Rails.root}#{cookbook_path(@name)}" %>
 
-Here is the interested user's information:
+Here is the information you need to know about the awesome Chef who interested in adoption your <%= @thing %>:
 Supermarket Username: <%= @adopting_username %>
 Email Address: <%= @email %>
 
-Please get in touch with them.
+Please get in touch with this Chef to discuss the potential adoption.
