makes a slight grammar correction to adoption email templates

--- a/app/views/adoption_mailer/interest_email.html.erb
+++ b/app/views/adoption_mailer/interest_email.html.erb
@@ -2,7 +2,7 @@ Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some i
 <%= link_to(@name, "#{Rails.root}#{cookbook_path(@name)}") %>
 <br />
 <br />
-Here is the information you need to know about the awesome Chef who interested in adoption your <%= @thing %>:<br />
+Here is the information you need to know about the awesome Chef who interested in adopting your <%= @thing %>:<br />
 Supermarket Username: <%= @adopting_username %><br />
 Email Address: <%= mail_to @email %><br />
 
