--- a/app/views/adoption_mailer/interest_email.text.erb
+++ b/app/views/adoption_mailer/interest_email.text.erb
@@ -2,7 +2,7 @@ Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some i
 
 <%= "#{Rails.root}#{cookbook_path(@name)}" %>
 
-Here is the information you need to know about the awesome Chef who interested in adoption your <%= @thing %>:
+Here is the information you need to know about the awesome Chef who interested in adopting your <%= @thing %>:
 Supermarket Username: <%= @adopting_username %>
 Email Address: <%= @email %>
 
