Adds Collaborator Groups feature to Supermarket
adding in specs - looking for a Create Group button

adds code and specs around viewing a list of groups

moving groups list action for a user to the UsersController

cleaning up specs and correctly styling errors

styles user groups page view

adds in code and specs for checking that a group is created with valid input

wip

repairs failing feature specs around creating a group

adds styling to new form and show view for groups

adds functionality to show groups on a user profile page

adds in group_members table to serve as the bridge between the users and groups tables

adds the current user as a member when creating a group

finds all members of a group for the group#show view

makes it so that a user profile page will only show groups the user is a member of and corrects spec logic

adds in specs to verify that a newly created group can be seen when a user clicks the groups button on their profile page

modifies group name in groups list so that it links to the group#show page

adds in basic styling to list of groups on the user profile page

adds basic styling to listing members on the group#show page

adds in boolean field on group_members table to indicate whether a member is an admin for the group

fixes broken spec around displaying the members of a group in the group#show view

adds in validations around creating group members

clarifies styling and specs around listing members

adds in distinction between admin members and regular members of a group

adds in code and routes for group_members controller and group_members#new action

adds in passing of group when creating a new member within the group

corrects rubocop errors

adds list of non-admin members to group#show view

wip - adds in ability to delete a member from a group

adds in code and specs for destroying a group member

adds in handling for when destroying a group member is unsuccessful

fixes failing controller spec

refactors the group member 

--- a/app/views/collaborators/_add.html.erb
+++ b/app/views/collaborators/_add.html.erb
@@ -3,10 +3,15 @@
 
 <%= form_for Collaborator.new do |f| %>
   <div class="row collapse">
-    <div class="small-10 columns">
+    <div class="small-12 columns">
       <%= f.hidden_field :resourceable_type, value: resource.class.name %>
       <%= f.hidden_field :resourceable_id, value: resource.id %>
-      <%= f.hidden_field :user_ids, class: 'collaborators multiple', 'data-url' => collaborators_path(ineligible_user_ids: Collaborator.ineligible_collaborators_for(resource).map(&:id)) %>
+      <%= f.label :users %>
+      <%= f.hidden_field :user_ids, id: 'user_ids', class: 'collaborators multiple', 'data-url' => collaborators_path(ineligible_user_ids: Collaborator.ineligible_collaborators_for(resource).map(&:id)) %>
+      <% if ROLLOUT.active?(:collaborator_groups) %>
+        <%= f.label :groups %>
+        <%= f.hidden_field :group_ids, id: 'group_ids', class: 'groups multiple', 'data-url' => groups_path %>
+      <% end %>
     </div>
     <div class="small-2 columns">
       <%= f.submit 'Add', class: 'button radius postfix' %>
