adds a link to Chef status page to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,7 @@
           <%= link_to 'Terms and Conditions of Use', chef_www_url('terms-of-service') %>
           <%= link_to 'Privacy Policy', chef_www_url('privacy-policy') %>
           <%= link_to 'Trademark Policy', chef_www_url('trademark-policy') %>
+          <%= link_to 'Status', chef_status_url %>
         </footer>
 
         <a class="exit-off-canvas"></a>
