--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -147,7 +147,7 @@
             can reset your key here:
           </p>
           <ol>
-            <li>Login or create an account at at: <a href="https://www.chef.io/account/login">www.chef.io/account/login<a></li>
+            <li>Login or create an account at: <a href="https://www.chef.io/account/login">www.chef.io/account/login<a></li>
             <li>Click on the "Password and Key" tab (<a href="https://www.chef.io/account/password">www.chef.io/account/password</a>)</li>
             <li>Click on <emph>Get a New Key</emph>. This will reset your client
               key.</li>
