correct url for cookbook up for adoption in adoption emails

--- a/app/views/adoption_mailer/interest_email.html.erb
+++ b/app/views/adoption_mailer/interest_email.html.erb
@@ -1,5 +1,5 @@
 Your <%= @thing %>, <%= @name %>, which is currently up for adoption, got some interest today.<br />
-<%= link_to(@name, "#{Rails.root}#{cookbook_path(@name)}") %>
+<%= link_to(@name, "#{root_url}#{cookbook_path(@name)}") %>
 <br />
 <br />
 Here is the information you need to know about the awesome Chef who interested in adopting your <%= @thing %>:<br />
