--- a/app/views/cookbooks/_sidebar.html.erb
+++ b/app/views/cookbooks/_sidebar.html.erb
@@ -12,9 +12,9 @@
     </div>
   <% end %>
 
-  <% if cookbook.partner_status? %>
+  <% if cookbook.partner? %>
     <div>
-      <%= link_to 'Partner Status!', partner_status(cookbook), method: :post, class: 'button radius tiny' %>
+      <img src="https://avatars3.githubusercontent.com/u/810824?v=3&s=115"/>
     </div>
   <% end %>
 
