Refactor "partner status" into a more generic badging model a la roles

--- a/app/views/cookbooks/_sidebar.html.erb
+++ b/app/views/cookbooks/_sidebar.html.erb
@@ -12,7 +12,7 @@
     </div>
   <% end %>
 
-  <% if cookbook.partner? %>
+  <% if cookbook.is? :partner %>
     <div>
       <img src="https://avatars3.githubusercontent.com/u/810824?v=3&s=115"/>
     </div>
