Add smaller no-text version of partner badge graphic.

--- a/app/views/cookbooks/_cookbook.html.erb
+++ b/app/views/cookbooks/_cookbook.html.erb
@@ -3,7 +3,6 @@
     <div class="header-content">
       <h2 class="title">
         <%= link_to cookbook, rel: 'cookbook', itemprop: 'name' do %><%= cookbook.name %><% end %>
-        <%= image_tag "badge-cookbook-partner-03.png", alt: "Partner Cookbook", title: "Partner Cookbook", height: 100, width: 100, class: "fa" if cookbook.is?(:partner) %>
         <i class="fa fa-file"></i>
         <small><%= cookbook.latest_cookbook_version.version %></small>
       </h2>
@@ -54,6 +53,17 @@
             </li>
           <% end %>
         </ul>
+      </div>
+
+      <% if cookbook.badges.present? %>
+      <div class="cookbook_badges_content show_for_medium_up">
+        <h5>Badges</h5>
+        <ul class="cookbook_badges">
+        <% if cookbook.is?(:partner) %>
+        <li class="cookbook_badge_icon had-tip" title=""/>
+          <%= image_tag "badge-cookbook-partner-03.png", alt: "Partner Cookbook", title: "Partner Cookbook", height: 100, width: 100, class: "fa"  %>
+        <% end %>
+      </ul>
       </div>
 
       <ul class="cookbook_stats">
