--- a/app/views/cookbooks/_sidebar.html.erb
+++ b/app/views/cookbooks/_sidebar.html.erb
@@ -73,7 +73,7 @@
 
     <% if cookbook.is? :partner %>
       <h4><i class="fa fa-shield"></i> Badges</h4>
-      <%= image_tag "badge-cookbook-partner.png", alt: "Partner Cookbook", title: "Partner Cookbook", height: 15, width: 15, class: "image_fix" %>
+      <%= image_tag "badge-cookbook-partner.svg", alt: "Partner Cookbook", title: "Partner Cookbook", height: 16, width: 16, class: "image_fix" %>
     <% end %>
 
 
