Add CSS styling for cookbook badges
Make both appearances—cookbook list and in sidebar—similar to platforms as
unordered lists and list items.

Showing images and only the partner badge at this point. Intentionally not
implemented until (if!) more badges are defined:
* displaying a collection of badges (via a partial?)
* using an icon set for badges instead of images

--- a/app/assets/stylesheets/listing.scss
+++ b/app/assets/stylesheets/listing.scss
@@ -166,7 +166,11 @@
       .cookbook_platforms_content {
         float: left;
       }
+
+      .cookbook_badges_content {
+        float: left;
+        margin-left: 1em;
+      }
     }
   }
 }
-
