--- a/app/views/cookbooks/_cookbook.html.erb
+++ b/app/views/cookbooks/_cookbook.html.erb
@@ -60,8 +60,8 @@
         <h5>Badges</h5>
         <ul class="cookbook_badges">
         <% if cookbook.is?(:partner) %>
-        <li class="cookbook_badge_icon had-tip" title=""/>
-          <%= image_tag "badge-cookbook-partner.svg", alt: "Partner Cookbook", title: "Partner Cookbook", height: 100, width: 100, class: "fa"  %>
+        <li class="cookbook_badge_icon has-tip" title=""/>
+          <%= image_tag "badge-cookbook-partner.svg", alt: "Partner Cookbook", title: "Partner Cookbook", height: 16, width: 16, class: "fa"  %>
         </li>
         <% end %>
       </ul>
