--- a/app/views/cookbooks/_cookbook.html.erb
+++ b/app/views/cookbooks/_cookbook.html.erb
@@ -61,7 +61,9 @@
         <ul class="cookbook_badges">
         <% if cookbook.is?(:partner) %>
         <li class="cookbook_badge_icon has-tip" title=""/>
-          <%= image_tag "badge-cookbook-partner.svg", alt: "Partner Cookbook", title: "Partner Cookbook", height: 16, width: 16, class: "fa"  %>
+          <a href="https://github.com/chef-partners/cookbook-guide/blob/master/cookbook-guide.pdf" target="new">
+            <%= image_tag "badge-cookbook-partner.svg", alt: "Partner Cookbook", title: "Partner Cookbook", height: 16, width: 16, class: "fa"  %>
+          </a>
         </li>
         <% end %>
       </ul>
