--- a/app/views/cookbooks/_sidebar.html.erb
+++ b/app/views/cookbooks/_sidebar.html.erb
@@ -74,9 +74,13 @@
     <% if cookbook.badges.present? %>
       <h4><i class="fa fa-shield"></i> Badges</h4>
       <ul class="cookbook_badges">
+        <% if cookbook.is? :partner %>
         <li class="cookbook_badge_icon has-tip"/>
-          <%= image_tag "badge-cookbook-partner.svg", alt: "Partner Cookbook", title: "Partner Cookbook", height: 16, width: 16, class: "fa"  %>
+          <a href="https://github.com/chef-partners/cookbook-guide/blob/master/cookbook-guide.pdf" target="new">
+            <%= image_tag "badge-cookbook-partner.svg", alt: "Partner Cookbook", title: "Partner Cookbook", height: 16, width: 16, class: "fa"  %>
+          </a>
         </li>
+        <% end %>
       </ul>
     <% end %>
 
