Add feature spec for displaying a partner badge on a cookbook
* adds new cookbook factory for creating a cookbook with the badge

--- a/app/views/cookbooks/_sidebar.html.erb
+++ b/app/views/cookbooks/_sidebar.html.erb
@@ -77,7 +77,7 @@
         <% if cookbook.is? :partner %>
         <li class="cookbook_badge_icon has-tip"/>
           <a href="https://github.com/chef-partners/cookbook-guide/blob/master/cookbook-guide.pdf" target="new">
-            <%= image_tag "badge-cookbook-partner.svg", alt: "Partner Cookbook", title: "Partner Cookbook", height: 16, width: 16, class: "fa"  %>
+            <%= image_tag "badge-cookbook-partner.svg", alt: "Partner Cookbook", title: "Partner Cookbook", height: 16, width: 16, id: 'partner_badge', class: "fa"  %>
           </a>
         </li>
         <% end %>
