Fix display of dependencies for a cookbook version other than latest
Fixes #1159

* Update development seeds to include 2 cookbook versions
* Even versions will depend on apt cookbook, odds on yum
* Give supported platforms a different version per version of cookbook, too

--- a/app/views/cookbooks/_main.html.erb
+++ b/app/views/cookbooks/_main.html.erb
@@ -70,10 +70,10 @@
     </div>
     <div class="content" id="dependencies">
       <h3 class="dependent-header">Dependent cookbooks</h3>
-      <% if cookbook.cookbook_dependencies.present? %>
+      <% if version.cookbook_dependencies.present? %>
         <table>
           <tbody>
-            <%= render partial: 'cookbooks/dependency', collection: cookbook.cookbook_dependencies %>
+            <%= render partial: 'cookbooks/dependency', collection: version.cookbook_dependencies %>
           </tbody>
         </table>
       <% else %>
